Applied user request: include a link for who-knew image instead of actual image path

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p>At hueneu, we believe in the quiet power of design. "Hue" represents the vibrant bursts of creativity, the unexpected palettes, the colors that tell a story. "Neu" signifies the grounding neutrality, the calm confidence, the intentional space that allows the story to breathe. </p>
             <p>We blend these elements to create designs that are not just seen, but felt. It's about finding that perfect balance, that surprising harmony that makes you pause and think... <span class="who-knew-trigger">"Whoa, who knew?"</span></p>
             <div class="who-knew-visual-container">
-                <img src="./images/who-knew-visual.svg" alt="Who Knew?! playful graphic with text 'Who Knew?!' and sparkles" class="who-knew-visual-image">
+                <img src="https://via.placeholder.com/300x200.svg?text=Replace+with+your+image+link" alt="Placeholder for 'Who Knew?!' visual. Please replace with your image link." class="who-knew-visual-image">
             </div>
         </section>
 
